--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -7,11 +7,19 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="/main">Main</a>
-            </li>
-            <li th:if="${isAdmin}" class="nav-item active">
-                <a class="nav-link" href="/user">User List</a>
+<!--            <li class="nav-item active">-->
+<!--                <a class="nav-link" href="/main">Main</a>-->
+<!--            </li>-->
+
+            <li th:if="${isAdmin}" class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Settings
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/trip_settings">Trips</a>
+                    <a class="dropdown-item" href="/city_settings">Cities</a>
+                    <a class="dropdown-item" href="/user">Users</a>
+                </div>
             </li>
         </ul>
     </div>
@@ -53,7 +61,7 @@
                             <div class="col" >
                                 <button type="submit" class="btn btn-info px-4 mt-3" >Sign in</button>
                             </div>
-                            <div class="col align-self-center" align="right">
+                            <div class="col align-self-center mt-1" align="right">
                                 <a href="/registration">Registration</a>
                             </div>
                         </div>
