--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,14 +7,22 @@
 </head>
 <body>
 
-<a href="/">Start page</a>
+<div>
+    <a type="button" class="btn btn-secondary" href="/"
+       style="background-color: #2F4F4F; box-shadow: 0 0 5px rgba(0,0,0,0.5); color:white;">
+        Main page</span>
+    </a>
+</div>
+
 <div class="container mt-5" >
 
+    <div class="text-danger">
     <div th:if="${param.error}" align="center">
         Invalid username and password.
     </div>
     <div th:if="${param.logout}" align="center">
         You have been logged out.
+    </div>
     </div>
 
     <div class="row mt-5">
