--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -2,68 +2,83 @@
 
 <head th:replace="fragments/head :: head"></head>
 
+<body style="background: url('https://nz4.ru/wp-content/uploads/2014/12/94.jpg') fixed;background-size: cover; ">
 
-<body style="background-color: #FFE4B5">
+<div class="jumbotron w-75 mx-auto" style="border-radius: 0.3em; margin-top: 5%;">
 
-<h3>User List</h3>
+    <div>
+        <a type="button" class="btn btn-secondary" href="/"
+           style="background-color: #2F4F4F; box-shadow: 0 0 5px rgba(0,0,0,0.5); color:white;">
+            Main page</span>
+        </a>
+    </div>
 
-<table class="table mt-5 w-75 p-3">
-    <thead class="thead-dark">
-    <tr >
-        <th>Username</th>
-        <th>Role</th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user : ${users}" >
-        <td th:text="${user.username}" ></td>
-        <td th:text="${user.roles}"></td>
-<!--        <td><a th:href="@{/user/{userId}(userId=${user.id})}">edit</a></td>-->
-        <td>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" th:attr="data-target='#exampleModal'+${user.id }" >
-                Launch demo modal <span th:text="${user.id}"></span>
-            </button>
+    <h3 align="center">User List</h3>
 
-            <form method="post" th:action="@{/user}">
-            <!-- Modal -->
-            <div class="modal fade" th:attr="id='exampleModal'+${user.id }" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Role for <span th:text="${user.username}"></span></h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
+    <table class="table mt-5 p-3">
+        <thead class="thead-dark">
+        <tr >
+            <th>Username</th>
+            <th>Role</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user : ${users}" >
+            <td th:text="${user.username}" ></td>
+            <td th:text="${user.roles}"></td>
+            <!--        <td><a th:href="@{/user/{userId}(userId=${user.id})}">edit</a></td>-->
+            <td>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-secondary" data-toggle="modal" th:attr="data-target='#exampleModal'+${user.id }"
+                        style="background-color: #2F4F4F; box-shadow: 0 0 5px rgba(0,0,0,0.5)">
+                    Change Role</span>
+                </button>
 
-                            <div class="custom-control custom-switch">
-                                <input type="checkbox" class="custom-control-input" th:attr="id='#customSwitch1'+${user.id }" name="USER">
-                                <label class="custom-control-label" th:attr="for='#customSwitch1'+${user.id }">USER</label>
+                <form method="post" th:action="@{/user}">
+                    <!-- Modal -->
+                    <div class="modal fade" th:attr="id='exampleModal'+${user.id }" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Role for <span th:text="${user.username}"></span></h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" th:attr="id='#customSwitch1'+${user.id }" name="USER">
+                                        <label class="custom-control-label" th:attr="for='#customSwitch1'+${user.id }">USER</label>
+                                    </div>
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" th:attr="id='#customSwitch2'+${user.id }" name="ADMIN">
+                                        <label class="custom-control-label" th:attr="for='#customSwitch2'+${user.id }">ADMIN</label>
+                                    </div>
+
+
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <input type="hidden" th:value="${user.id}" name="userId">
+                                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                                    <button type="submit" class="btn btn-primary">Save changes</button>
+                                </div>
                             </div>
-                            <div class="custom-control custom-switch">
-                                <input type="checkbox" class="custom-control-input" th:attr="id='#customSwitch2'+${user.id }" name="ADMIN">
-                                <label class="custom-control-label" th:attr="for='#customSwitch2'+${user.id }">ADMIN</label>
-                            </div>
-
-
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <input type="hidden" th:value="${user.id}" name="userId">
-                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                            <button type="submit" class="btn btn-primary">Save changes</button>
                         </div>
                     </div>
-                </div>
-            </div>
-            </form>
-        </td>
-    </tr>
-    </tbody>
-</table>
+                </form>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+
+</div>
+
+
+
 
 <div th:replace="fragments/script :: scripts"></div>
 </body>
