--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,15 +1,17 @@
-<html xmlns:th="https://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="https://www.thymeleaf.org">
 <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light" style="background-color: #FFE4B5; box-shadow: 0 0 10px rgba(0,0,0,0.5)">
-    <a class="navbar-brand" href="#">Home</a>
+    <a class="navbar-brand" href="/" style="font-family:  Bradley Hand, cursive;font-size:20px;">TravellSales</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-<!--            <li class="nav-item active">-->
-<!--                <a class="nav-link" href="/main">Main</a>-->
-<!--            </li>-->
+            <li th:if="${q}" class="nav-item active">
+                <a class="navbar-brand" href="#" style="color:black">Settings
+                    <i class="large material-icons " style="color:white">settings_applications</i>
+                </a>
+            </li>
 
             <li th:if="${isAdmin}" class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -24,6 +26,7 @@
         </ul>
     </div>
 
+
     <!-- Button trigger modal -->
     <div th:unless="${authUser}">
         <button  type="button" class="btn btn-secondary" data-toggle="modal" data-target="#loginModal" style="background-color: #708090; box-shadow: 0 0 5px rgba(0,0,0,0.5)">
@@ -33,7 +36,7 @@
     <div th:if="${authUser}">
         <form th:action="@{/logout}" method="post">
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-            <button  type="submit" class="btn btn-secondary"style="background-color: #708090; box-shadow: 0 0 5px rgba(0,0,0,0.5)">
+            <button  type="submit" class="btn btn-secondary" style="background-color: #708090; box-shadow: 0 0 5px rgba(0,0,0,0.5)">
                 Sign out
             </button>
         </form>
