--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -5,13 +5,42 @@
 </head>
 
 
-<body>
+<body style="background-color: #DCDCDC; box-shadow: 0 0 10px rgba(0,0,0,0.5)">
 
 <nav th:replace="fragments/navbar :: navbar"></nav>
 
-<div class="container mt-5">
 
-    <div align="center" class="mt-5">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner " style="height:500px;">
+        <div class="carousel-item active">
+            <img src="https://www.pro-sky.com/images/en/news/news_header_webseite_-49-_342_full.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="https://capturetheatlas.com/wp-content/uploads/2018/05/Golden-Monument-1415x540-1566664419.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="http://www.ncl.com/sites/default/files/hawaii-couple-surfing-112918.jpg" class="d-block w-100" alt="...">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+
+<div class="container mt-5 pb-5" >
+
+    <div align="center" class="mt-5" >
         <h1>The best way to find cheap trips</h1>
     </div>
 
@@ -35,7 +64,6 @@
         </div>
     </form>
 </div>
-
 
 <div th:replace="fragments/script :: scripts"></div>
 
