--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,12 +7,6 @@
 </head>
 <body>
 
-<div>
-    <a type="button" class="btn btn-secondary" href="/"
-       style="background-color: #2F4F4F; box-shadow: 0 0 5px rgba(0,0,0,0.5); color:white;">
-        Main page</span>
-    </a>
-</div>
 
 <div class="container mt-5" >
 
@@ -44,9 +38,27 @@
                         <input type="checkbox" value="remember-me">
                         Remember me
                     </label>
+                    <a href="/" class="pull-right mt-4">
+                        Main page
+                    </a>
                 </form>
             </div>
         </div>
+    </div>
+    <div class="row mt-2">
+        <i class="mx-auto">
+            Если у вас нет аккаунта и вы не хотите создавать новый, можете воспользоваться аккаунтом admin(username:q ; password: q)
+        </i>
+        <i class="mx-auto">
+            У пользователей есть 2 роли User и Admin, у которого в свою очередь есть дополнительные возможности в работе приложения.
+        </i>
+        <i class="mx-auto">
+            На текущий момент в базе данных всего пару городов (Brest, Minsk, Grodno, Mogilev)
+        </i>
+        <i class="mx-auto">
+            Можно воспользоваться правами Админа и добавить новые поездки, города, менять роли у пользователей и т.д.
+        </i>
+
     </div>
 </div>
 
