--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,17 +1,13 @@
 <html xmlns:th="https://www.thymeleaf.org">
-<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light" style="background-color: #FFE4B5; box-shadow: 0 0 10px rgba(0,0,0,0.5)">
-    <a class="navbar-brand" href="/" style="font-family:  Bradley Hand, cursive;font-size:20px;">TravellSales</a>
+
+<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light" id="navbar">
+    <a class="navbar-brand" href="/">TravelSales</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li th:if="${q}" class="nav-item active">
-                <a class="navbar-brand" href="#" style="color:black">Settings
-                    <i class="large material-icons " style="color:white">settings_applications</i>
-                </a>
-            </li>
+        <ul class="navbar-nav ">
 
             <li th:if="${isAdmin}" class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -23,21 +19,37 @@
                     <a class="dropdown-item" href="/user">Users</a>
                 </div>
             </li>
+
+            <li th:if="${authUser}" class="nav-item my-auto ml-2">
+                <a class="navbar-link-q" href="/user/ticket">My tickets
+<!--                    <i class="large material-icons" style="color:white;">settings_applications</i>-->
+                </a>
+            </li>
+
+            <li th:if="${authUser}" class="nav-item my-auto ml-3">
+                <a class="navbar-link-q" href="/user/favorite_trips">Favorites
+<!--                    <i class="large material-icons" style="color:white;">settings_applications</i>-->
+                </a>
+            </li>
         </ul>
     </div>
 
 
     <!-- Button trigger modal -->
     <div th:unless="${authUser}">
-        <button  type="button" class="btn btn-secondary" data-toggle="modal" data-target="#loginModal" style="background-color: #708090; box-shadow: 0 0 5px rgba(0,0,0,0.5)">
-            Login
+        <button  type="button" class="" id="button_login" data-toggle="modal" data-target="#loginModal">
+            <i class="material-icons">
+                account_circle
+            </i>
         </button>
     </div>
     <div th:if="${authUser}">
         <form th:action="@{/logout}" method="post">
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-            <button  type="submit" class="btn btn-secondary" style="background-color: #708090; box-shadow: 0 0 5px rgba(0,0,0,0.5)">
-                Sign out
+            <button  type="submit" id="button_login1">
+                <i class="material-icons">
+                    input
+                </i>
             </button>
         </form>
     </div>
@@ -57,8 +69,8 @@
                 <div class="modal-body">
 
                     <form th:action="@{/login}" method="post">
-                        <div><input type="text" class="form-control" name="username" placeholder="Username"/> </label></div>
-                        <div><input type="password" class="form-control mt-2" name="password" placeholder="Password"/> </label></div>
+                        <div><input type="text" class="form-control" name="username" placeholder="Username" required autofocus> </div>
+                        <div><input type="password" class="form-control mt-2" name="password" placeholder="Password" required autofocus></div>
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                         <div class="row">
                             <div class="col" >
