--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -3,11 +3,77 @@
 
 <head th:replace="fragments/head :: head">
 </head>
+<link rel="stylesheet" href="/static/greeting.css">
 
-
-<body style="background-color: #DCDCDC; box-shadow: 0 0 10px rgba(0,0,0,0.5)">
+<body>
 
 <nav th:replace="fragments/navbar :: navbar"></nav>
+
+<div class="main_input_form_search pb-5" >
+
+    <div class="container">
+    <div align="center" class="h1" >
+        <h1>Intercity bus search engine</h1>
+    </div>
+        <div align="center" class="h3">
+            <h3>Find cheap bus ticket prices in Belarus</h3>
+        </div>
+
+    <form th:action="@{/main}" class="mt-4">
+        <div class="row">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="From" name="from" required autofocus>
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Where" name="where" required autofocus>
+            </div>
+            <div class="col">
+                <input id="date" type="date" class="form-control" data-title="Date" placeholder="Date" name="date">
+            </div>
+            <div class="col">
+                <input id="time" type="time" class="form-control" placeholder="Time" data-title="Time" name="time">
+            </div>
+        </div>
+        <div align="center" class="mt-4">
+            <button type="submit" class="btn btn-secondary btn-lg">Find Tickets</button>
+        </div>
+    </form>
+    </div>
+</div>
+
+<div class="mt-2">
+    <i>
+        Этим проектом автор хочет показать свои знания o Spring Framework, Hibernate, HQL и т.д. Спасибо за понимание).
+    </i>
+    <i>
+        Код присутствует в <a href="/https://github.com/VladislavBedritsky/TravelProject-Spring-Hibernate-">репозитории</a>.
+    </i>
+</div>
+
+<div class="container" id="text_phone" align="center">
+    <h3>
+        GET THE FREE APP FOR CHEAP BUS TRIPS IN BELARUS
+    </h3>
+    <p>
+        Use the intercity bus search engine on Android and iOS to compare all bus operators in Belarus.
+    </p>
+</div>
+
+<div class="row" id="row_phone">
+    <div class="col">
+
+    </div>
+    <div class="col" id="col2">
+
+    </div>
+    <div class="col" id="col3">
+
+    </div>
+    <div class="col">
+
+    </div>
+
+</div>
 
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -16,18 +82,30 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
-    <div class="carousel-inner " style="height:500px;">
-        <div class="carousel-item active">
-            <img src="https://www.pro-sky.com/images/en/news/news_header_webseite_-49-_342_full.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-inner">
+        <div class="carousel-item active" id="car_item_1">
+            <h2 >
+                The Intericity Bus Is Economical And Eco-friendly
+            </h2>
+<!--            <img src="https://www.pro-sky.com/images/en/news/news_header_webseite_-49-_342_full.jpg" class="d-block w-100" alt="...">-->
         </div>
-        <div class="carousel-item">
-            <img src="https://capturetheatlas.com/wp-content/uploads/2018/05/Golden-Monument-1415x540-1566664419.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-item" id="car_item_2">
+            <h2 >
+                Low-cost Bus Travels Across Belarus:
+            </h2>
+            <h3>
+                Compare Fares, Times And Ticketing
+            </h3>
+<!--            <img src="https://capturetheatlas.com/wp-content/uploads/2018/05/Golden-Monument-1415x540-1566664419.jpg" class="d-block" alt="...">-->
         </div>
-        <div class="carousel-item">
-            <img src="http://www.ncl.com/sites/default/files/hawaii-couple-surfing-112918.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-item" id="car_item_3">
+            <h4 >
+                The intercity bus gets you through Belarus
+            </h4>
+<!--            <img src="http://www.ncl.com/sites/default/files/hawaii-couple-surfing-112918.jpg" class="d-block" alt="...">-->
         </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
@@ -38,34 +116,25 @@
 </div>
 
 
-<div class="container mt-5 pb-5" >
-
-    <div align="center" class="mt-5" >
-        <h1>The best way to find cheap trips</h1>
+<div id="footer" class="pull-down">
+    <div class="container">
+        <div class="pull-left">
+            <p>
+                Author: Vladislav Bedritsky
+                <a href="https://github.com/VladislavBedritsky" class="ml-2">
+                    Github
+                </a>
+            </p>
+        </div>
+        <div class="pull-right hidden-xs">
+            © Copyright 2019 | All rights reserved | no responsibility is taken for the correctness of the given information
+        </div>
     </div>
-
-    <form th:action="@{/main}" class="mt-4">
-        <div class="row">
-            <div class="col">
-                <input type="text" class="form-control" placeholder="From" name="from">
-            </div>
-            <div class="col">
-                <input type="text" class="form-control" placeholder="Where" name="where">
-            </div>
-            <div class="col">
-                <input type="date" class="form-control" placeholder="Date" name="date">
-            </div>
-            <div class="col">
-                <input type="time" class="form-control" placeholder="Time" name="time">
-            </div>
-        </div>
-        <div align="center" class="mt-4">
-            <button type="submit" class="btn btn-secondary btn-lg" style="background-color: #2F4F4F; box-shadow: 0 0 5px rgba(0,0,0,0.5)">Find Tickets</button>
-        </div>
-    </form>
 </div>
 
-<div th:replace="fragments/script :: scripts"></div>
+
+
+<div th:replace="fragments/script :: scripts" id="end" style="background-color:black"></div>
 
 </body>
 </html>
