--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -46,7 +46,7 @@
         Этим проектом автор хочет показать свои знания o Spring Framework, Hibernate, HQL и т.д. Спасибо за понимание).
     </i>
     <i>
-        Код присутствует в <a href="/https://github.com/VladislavBedritsky/TravelProject-Spring-Hibernate-">репозитории</a>.
+        Код присутствует в <a href="https://github.com/VladislavBedritsky/TravelProject-Spring-Hibernate-">репозитории</a>.
     </i>
 </div>
 
